--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,12 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# env files
+.env.development
+.env.production
+.env.local
+.env*.local
+# Note: .env.example is committed as a template
 
 # vercel
 .vercel
@@ -39,3 +43,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# prisma generated client
+/src/generated/
+/prisma/migrations
+
+# cookies from curl requests
+cookies.txt
