--- a/package.json
+++ b/package.json
@@ -4,35 +4,41 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
+    "dev": "dotenv -e .env.development -- next dev",
+    "dev:prod": "NODE_ENV=production dotenv -e .env.production -- next dev",
+    "build": "prisma generate && next build",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build",
+    "start": "start",
+    "lint": "eslint",
+    "db:generate": "prisma generate",
+    "db:migrate:dev": "NODE_ENV=development dotenv -e .env.development -- prisma migrate dev --name init",
+    "db:migrate:prod": "NODE_ENV=production dotenv -e .env.production -- prisma migrate dev --name init",
+    "db:deploy": "prisma migrate deploy",
+    "db:studio": "prisma studio"
   },
   "dependencies": {
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
-    "@types/uuid": "^11.0.0",
+    "@tailwindcss/postcss": "^4.1.18",
+    "@types/node": "^24.3.0",
+    "@types/pg": "^8.16.0",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
     "better-auth": "^1.4.12",
     "dotenv": "^17.2.3",
+    "dotenv-cli": "^11.0.0",
     "next": "16.1.1",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "uuid": "^13.0.0",
+    "typescript": "^5",
     "zod": "^4.3.5"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/pg": "^8.16.0",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.18"
   }
 }
