Backend tool dashboard for administrate API keys and manage features

--- a/.env.example
+++ b/.env.example
@@ -14,8 +14,10 @@ BETTER_AUTH_URL="http://localhost:3000"
 # API Configuration
 API_KEY_HEADER=x-api-key
 
-# Redirect URL (Phase 1 - the simple UI redirects to this URL)
+# Link on dashboard to core product. Use "#" to disable the link.
 REDIRECT_URL="https://your-main-app.com"
 
-# App Configuration
-NODE_ENV=development
+# Admin user configuration - Used by `npm run setup:admin` to create the initial admin user. If not provided, defaults are used.
+ADMIN_EMAIL="admin@example.com"
+ADMIN_PASSWORD=secure123
+ADMIN_NAME="Admin User"
