--- a/package.json
+++ b/package.json
@@ -11,27 +11,50 @@
     "start": "start",
     "lint": "eslint",
     "db:generate": "prisma generate",
-    "db:migrate:dev": "NODE_ENV=development dotenv -e .env.development -- prisma migrate dev --name init",
+    "db:migrate": "NODE_ENV=development dotenv -e .env.development -- prisma migrate dev --name init",
     "db:migrate:prod": "NODE_ENV=production dotenv -e .env.production -- prisma migrate dev --name init",
-    "db:deploy": "prisma migrate deploy",
-    "db:studio": "prisma studio"
+    "db:deploy": "NODE_ENV=development dotenv -e .env.development -- prisma migrate deploy",
+    "db:deploy:prod": "NODE_ENV=production dotenv -e .env.production -- prisma migrate deploy",
+    "db:studio": "prisma studio",
+    "setup:admin": "NODE_ENV=development dotenv -e .env.development -- tsx scripts/setup-admin.ts",
+    "setup:admin:prod": "NODE_ENV=production dotenv -e .env.production -- tsx scripts/setup-admin.ts"
   },
   "dependencies": {
+    "@daveyplate/better-auth-ui": "^3.3.15",
+    "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.2.0",
     "@prisma/client": "^7.2.0",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/postcss": "^4.1.18",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^24.3.0",
     "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "bcrypt": "^6.0.0",
     "better-auth": "^1.4.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.3",
     "dotenv-cli": "^11.0.0",
+    "lucide-react": "^0.562.0",
     "next": "16.1.1",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "prisma": "^7.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.4.0",
+    "tw-animate-css": "^1.4.0",
+    "tsx": "^4.21.0",
     "typescript": "^5",
     "zod": "^4.3.5"
   },
