--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tailwindcss/postcss": "^4.1.18",
+    "@tanstack/react-query": "^5.90.17",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^24.3.0",
     "@types/pg": "^8.16.0",
@@ -53,8 +54,8 @@
     "react-hook-form": "^7.71.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
-    "tw-animate-css": "^1.4.0",
     "tsx": "^4.21.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5",
     "zod": "^4.3.5"
   },
