--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ DATABASE_URL="postgresql://user:password@localhost:5432/roadmap_db?schema=public
 
 # Authentication (better-auth)
 BETTER_AUTH_SECRET="your-secret-key-min-32-characters-long" # You may use `openssl rand -base64 32`
-BETTER_AUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_BETTER_AUTH_URL="http://localhost:3000"
 
 # API Configuration
 API_KEY_HEADER=x-api-key
